# scargo

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CODE-OF-CONDUCT.md  MANIFEST.in  README.md  build.py  clean.py  docker-compose.yaml  pyproject.toml  run.py  scargo.py  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: daily_tests.yml  doc_release_only.yml  main.yml  pr.yml  release.yml  workflow-common.yml
ci/: Dockerfile  requirements.txt  setup.sh
ci/scripts/: docker_setup.sh  plantuml
common_dev/scripts/: copyrights.py  cyclomatic.py  documentation.py  pylintchecker.py  test_report.py  todo_check.py
docs/: Makefile  scargo_flows.md
docs/source/: about.rst  conf.py  contributing.rst  index.rst  installation.rst  troubleshooting.rst  versions.rst
docs/source/_static/: readme.md
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
docs/source/arch/: arch-generators.rst  arch-interaction.rst  index.rst  scargo_common_seq.puml
docs/source/guides/: index.rst  scargo-atsam.rst  scargo-esp32.rst  scargo-multitarget.rst  scargo-stm32.rst  scargo-x86.rst  x86-project.rst
docs/source/scargo/: index.rst  scargo-build.rst  scargo-check.rst  scargo-clean.rst  scargo-debug.rst  scargo-docker.rst  scargo-documentation.rst  scargo-fix.rst  scargo-flash.rst  scargo-gen.rst  scargo-monitor.rst  scargo-new.rst  scargo-publish.rst  scargo-run.rst  scargo-stm32.rst  scargo-test.rst  scargo-toml.rst  scargo-update.rst  scargo-version.rst
example_project/: .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py  scargo.toml
example_project/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  requirements.txt
example_project/src/: CMakeLists.txt  bar.cpp  bar.hpp
example_project/tests/: CMakeLists.txt  conanfile.py
example_project/tests/mocks/static_mock/: static_mock.h
example_project/tests/ut/: CMakeLists.txt
example_project/tests/ut/pow3/: CMakeLists.txt  ut_pow3.cpp
example_project/tests/ut/square/: ut_square.cpp
example_project/tests/ut/twice/: ut_twice.cpp
scargo/: __init__.py  clang_utils.py  cli.py  conan_utils.py  config.py  config_utils.py  docker_utils.py  global_values.py  logger.py  path_utils.py  sys_utils.py
scargo/certs/: certGen.sh  generateAllCertificates.sh
scargo/commands/: build.py  check.py  clean.py  debug.py  doc.py  docker.py  fix.py  flash.py  gen.py  license_check.py  monitor.py  new.py  publish.py  run.py  sc_src.py  test.py  update.py  version.py
scargo/docker_base/: docker-compose.yml  esp32.Dockerfile  stm32.Dockerfile  x86.Dockerfile
scargo/file_generators/: base_gen.py  cicd_gen.py  cmake_gen.py  conan_gen.py  cpp_gen.py  docker_gen.py  env_gen.py  mock_gen.py  readme_gen.py  tests_gen.py  toml_gen.py  ut_gen.py  vscode_gen.py
scargo/file_generators/clang_parser/: __init__.py  data_classes.py  header_parser.py  params_extractor.py
scargo/file_generators/mock_utils/: data_classes.py  header_parser.py  missing_mocks.json  params_extractor.py
scargo/file_generators/templates/: .gitlab-ci-custom.yml.j2  .gitlab-ci.yml.j2  CMakeLists.txt.j2  README.md.j2  atsam.cmake.j2  esp32.cmake.j2  project.cmake.j2  scargo.toml.j2  stm32.cmake.j2  x86.cmake.j2
scargo/jinja/: base_gen.py  cicd_gen.py  cmake_gen.py  conan_gen.py  cpp_gen.py  docker_gen.py  env_gen.py  mock_gen.py  readme_gen.py  tests_gen.py  toml_gen.py  ut_gen.py
scargo/jinja/conan/: conanfile.py.j2  conanfiletest.j2
scargo/jinja/cpp/: cmake-src-esp32.j2  cmake-src-stm32.j2  lib.cpp.j2  lib.h.j2  main.cpp.j2
scargo/jinja/docker/: Dockerfile-custom.j2  Dockerfile-esp32.j2  Dockerfile-stm32.j2  Dockerfile-x86.j2  Dockerfile.j2  docker-compose.yaml.j2
scargo/jinja/mock_templates/: CMakeLists.txt  class_interface.h.j2  class_mock.h.j2
scargo/jinja/mock_utils/: cmake_utlis.py  data_classes.py  error_classes.py  scraping_utils.py
scargo/jinja/templates/: .gitlab-ci.yml.j2  CMakeLists.txt.j2  README.md.j2  esp32.cmake.j2  scargo.toml.j2  stm32.cmake.j2  x86.cmake.j2
scargo/jinja/test_templates/static_mock/: CMakeLists.txt
scargo/scargo_src/: global_values.py  sc_build.py  sc_check.py  sc_clean.py  sc_config.py  sc_debug.py  sc_doc.py  sc_docker.py  sc_fix.py  sc_flash.py  sc_gen.py  sc_logger.py  sc_new.py  sc_publish.py  sc_run.py  sc_src.py  sc_test.py  sc_update.py  sc_ver.py  utils.py
scargo/target_helpers/: atmel.xml  atsam_helper.py  esp32_helper.py  stm32_helper.py
scargo/templates/: .gitignore
scargo/utils/: clang_utils.py  conan_utils.py  docker_utils.py  file_utils.py  path_utils.py  sys_utils.py
tests/: __init__.py
tests/it/: __init__.py  conftest.py  it_scargo_bin_flow.py  it_scargo_command_test.py  it_scargo_commands_flow.py  it_scargo_lib_flow.py  pytest.ini  utils.py
tests/it/test_projects/common_scargo_project_stm32/src/: CMakeLists.txt  test_bin.cpp  test_lib.cpp  test_lib.h
tests/test_data/test_projects/common_scargo_project/src/: CMakeLists.txt  common_scargo_project.cpp  common_scargo_project_path.cpp
tests/test_data/test_projects/common_scargo_project/tests/: CMakeLists.txt
tests/test_data/test_projects/common_scargo_project_atsam/tests/: CMakeLists.txt  conanfile.py
tests/test_data/test_projects/common_scargo_project_atsam/tests/it/: CMakeLists.txt
tests/test_data/test_projects/common_scargo_project_atsam/tests/mocks/: CMakeLists.txt
tests/test_data/test_projects/common_scargo_project_stm32/src/: CMakeLists.txt  test_bin.cpp
tests/test_data/test_projects/common_scargo_project_stm32/tests/: CMakeLists.txt
tests/test_data/test_projects/common_scargo_project_stm32/tests/mocks/static_mock/: static_mock.h
tests/ut/: conftest.py  pytest.ini  ut_conan_utils.py  ut_scargo_build.py  ut_scargo_check.py  ut_scargo_clean.py  ut_scargo_debug.py  ut_scargo_doc.py  ut_scargo_docker.py  ut_scargo_fix.py  ut_scargo_flash.py  ut_scargo_gen.py  ut_scargo_new.py  ut_scargo_publish.py  ut_scargo_run.py  ut_scargo_test.py  ut_scargo_update.py  ut_scargo_version.py  ut_scarto_fix.py  utils.py
(+210 files in other folders)
